<resources>
    <string name="app_name">WallPaper</string>
    <string name="wallpaper_loading">loading....</string>
    <string name="this_action">Khiem Do</string>
    <string name="powered_by_kdnt">com.kdnt.wallpaper</string>
    <string name="set_wallpaper">Set</string>
    <string name="nature">Nature</string>
    <string name="trending">Trending</string>
    <string name="wallpapers_hd">Wallpapers HD</string>
    <string name="favourites">Favourites</string>
    <string name="download">Download</string>
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="more_option">More Option</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_photos">Search photos...</string>
</resources>