<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favorite"/>

    <item
        android:id="@+id/download"
        android:title="@string/download"
        android:icon="@drawable/ic_download"/>

    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        android:icon="@drawable/ic_theme"/>

    <item android:title="@string/more_option">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_setting"/>

            <item
                android:id="@+id/rate_us"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_star_rate"/>

            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"/>
        </menu>
    </item>

</menu>